Make zendesk py3k compatible.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,2 +1,3 @@
 v1.00, 2011-04-01 -- Initial release.
 v1.1, 2011-10-05 -- Moved from zendesk xml to json.
+v1.1, 2015-10-27 -- Make zendesk Py3k compatible.
